--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,13 @@ body{
 .section-title{
     margin-bottom: 2rem;
 }
+@media  screen and(min-width: 992px) {
+    .section-center{
+        width: 95%;
+        padding: 4rem 1rem;
+    }
+    
+}
 /*-------------- navbar---------------*/
 .nav-btn svg{
     fill: var(--clr-primary);
@@ -304,4 +311,179 @@ body{
 .about-picture-container:hover .about-picture{
     transform: scale(1,2);
     opacity: 0.5;
+}
+.about-text{
+    max-width: 26rem;
+    color: var(--clr-grey-2);
+}
+@media screen and (min-width: 992px) {
+    .about-img,
+    .about-info{
+        float:left;
+        width:50%;
+    }
+    .about-info{
+        padding-left:2rem;
+    }
+    
+}
+/*----------products----*/
+.products{
+    background-color: var(--clr-grey-3);
+}
+.products .product-info{
+    padding: 2rem 0;
+}
+.product-title{
+    font-size: 1.02rem;
+}
+.product-text{
+    color: var(--clr-grey-2);
+    width: 20rem;
+}
+.product-price{
+    color: var(--clr-primary);
+    font-size: 1.01rem;
+}
+.product-img{
+    boder-radius:5pxs;
+    height: 17rem;
+    object-fit: cover;
+    margin-bottom: 2rem;
+    box-shadow: 0px 6px 3px rgba(0, 0, 0, 0.2);
+    transition: var(--transition);
+}
+.product-img:hover{
+    box-shadow: 0px 6px 3px rgba(0, 0, 0, 0.3);
+    transform: translateY(-2px);
+}
+@media screen and (min-width: 768px){
+    .product{
+        float: left;
+        width: 50%;
+        padding-right: 2rem;
+    }
+}
+@media screen and (min-width: 992px){
+    .product{
+        width: 33.33%;
+        
+    }
+
+}
+@media screen and (min-width: 1200px){
+    .product-info{
+        float:left;
+        width: 30%;
+        
+    }
+    .product-inventory{
+        float:left;
+        width: 70%;
+        }
+    .product{
+        margin: 0;
+        padding: 0 1rem;
+    }    
+
+}
+/*------contact us-----*/
+.contact{
+    background-color:var(--clr-grey-3);
+}
+.contact-form,
+.contact-info{
+    margin: 1rem 0;
+}
+.contact-title{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-weight: 500;
+    margin-bottom: -0.05rem;
+}
+.contact-text,
+{
+    color:var(--clr-grey-2)
+}
+.contact-title svg{
+    fill: var(--clr-grey-1);
+    
+}
+.contact-item{
+    margin-bottom: 1.25rem;
+}
+.contact-form{
+    background-color: var(--clr-white);
+    padding: 1.3rem;
+    max-width: 35rem;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+.contact-form h3{
+    font-family: var(--ff-design);
+    color: var(--clr-primary);
+    font-size: 1.75;
+    text-align:center;
+}
+.form-group{
+    height: 35px;
+    margin-bottom: 20px;
+    position: relative;
+
+}
+.form-control{
+    width: 100%;
+    height: 100%;
+    background: none;
+    border: 1px solid var(--clr-grey-2);
+    outline: none;
+    padding: 16px;
+    border-radius: 3px;
+    resize:none;
+    font-family: var(--ff-secondary);
+    z-index: 1;
+
+
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+textarea.form-control{
+    height: 100px;
+}
+.form-label{
+    position: absolute;
+    left: 7px;
+    top:7px;
+    color: var(--clr-grey-2);
+    background-color:var(--clr-white);
+    padding: 0 6px;
+    font-size: 14px;
+    transition: var(--transition);
+    }
+.form-control:focus + .from-label{
+    top: -10px;
+    color: var(--clr-primary);
+    z-index: 10;
+}    
+.form-control:focus{
+    border: 1px solid var(--clr-primary);
+
+}
+.form-control:not(:focus):valid + label{
+    top: -10px;
+    z-index: 10;
+}
+.submit-btn{
+    padding: 0.7rem 1rem;
+    margin-top: 3.5rem;
+}
+@media screen and (min-width: 992px){
+    .contact-form,
+    .contact-info{
+        float: left;
+        width: 50%;
+    }
+    
 }
